--- a/bower.json
+++ b/bower.json
@@ -14,8 +14,7 @@
   ],
   "dependencies": {
     "bootstrap": "3.3.7",
-    "font-awesome": "fontawesome#4.7.0",
-    "owl.carousel": "2.2.0",
+    "components-font-awesome": "4.7.0",
     "jquery": "3.1.1"
   }
 }
