--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "3.3.7",
     "components-font-awesome": "4.7.0",
-    "jquery": "3.1.1"
+    "jquery": "3.1.1",
+    "owl-carousel": "1.3.2"
   }
 }
