--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "bootstrap": "3.3.7",
     "components-font-awesome": "4.7.0",
     "jquery": "3.1.1",
-    "owl-carousel": "1.3.2"
+    "owl-carousel": "1.3.2",
+    "animate.css": "3.5.2"
   }
 }
